Add privacy, terms, simple styling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Source+Sans+Pro')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto+Condensed')
   body
+    div(class='header')
+      div(class='header-title')
+        p(class='header-text') Simply
+        p(class='header-text') Grow
+      div(class='subtitle')
+        p(class='subheader') Build And Reach Your Audience
     block content
