--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,69 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  font: 14px "Source Sans pro", Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.header {
+  background-color: rgba(98,159,244,1);
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  border-right: 1px solid #FFF;
+  padding-right: 12px;
+}
+
+.subtitle {
+  padding-left: 20px;
+  margin-top: 30px;
+}
+
+.header-text {
+  font-size: 48px;
+  color: #FFF;
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.subheader {
+  margin-top: 12px;
+  font-size: 20px;
+  color: #FFF;
+}
+
+.home-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 300px;
+}
+
+.links a:first-of-type {
+  border-right: 1px solid #00B7FF;
+}
+
+.links a {
+  padding: 10px;
+}
+
+.legal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 50px;
 }
