--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div(class='home-content')
+    h1 Coming Soon
+    div(class='links')
+      a(href='/privacy') Privacy Policy
+      a(href='/terms-and-conditions') Terms and Conditions
